; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_XzEnc.c_Xz_Compress.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/extr_XzEnc.c_Xz_Compress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_28__ = type { i8* }
%struct.TYPE_37__ = type { %struct.TYPE_27__, %struct.TYPE_29__, i32 }
%struct.TYPE_27__ = type { %struct.TYPE_30__, %struct.TYPE_30__* }
%struct.TYPE_30__ = type { i32 }
%struct.TYPE_29__ = type { %struct.TYPE_30__, %struct.TYPE_30__* }
%struct.TYPE_31__ = type { %struct.TYPE_32__*, i32, i64 }
%struct.TYPE_32__ = type { i64, i32, i32, i64 }
%struct.TYPE_36__ = type { i32, %struct.TYPE_30__, i32* }
%struct.TYPE_35__ = type { i64, %struct.TYPE_26__, i32* }
%struct.TYPE_26__ = type { i32 }
%struct.TYPE_34__ = type { i32, i64, %struct.TYPE_33__* }
%struct.TYPE_33__ = type { i64, i32, i8** }

@XZ_ID_Delta = common dso_local global i64 0, align 8
@XZ_ID_LZMA2 = common dso_local global i64 0, align 8
@MyWrite = common dso_local global i32 0, align 4
@SeqCheckInStream_Read = common dso_local global i32 0, align 4
@g_Alloc = common dso_local global i32 0, align 4
@XZ_ID_Subblock = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_28__*, %struct.TYPE_37__*, i32*, i32*, %struct.TYPE_31__*, i32*)* @Xz_Compress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Xz_Compress(%struct.TYPE_28__* %0, %struct.TYPE_37__* %1, i32* %2, i32* %3, %struct.TYPE_31__* %4, i32* %5) #0 {
  %7 = alloca %struct.TYPE_28__*, align 8
  %8 = alloca %struct.TYPE_37__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_31__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_36__, align 8
  %14 = alloca %struct.TYPE_35__, align 8
  %15 = alloca %struct.TYPE_34__, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_33__*, align 8
  %18 = alloca %struct.TYPE_32__*, align 8
  %19 = alloca %struct.TYPE_33__*, align 8
  %20 = alloca i64, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca [128 x i8*], align 16
  store %struct.TYPE_28__* %0, %struct.TYPE_28__** %7, align 8
  store %struct.TYPE_37__* %1, %struct.TYPE_37__** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.TYPE_31__* %4, %struct.TYPE_31__** %11, align 8
  store i32* %5, i32** %12, align 8
  %24 = load %struct.TYPE_31__*, %struct.TYPE_31__** %11, align 8
  %25 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = inttoptr i64 %26 to i8*
  %28 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %28, i32 0, i32 0
  store i8* %27, i8** %29, align 8
  %30 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.TYPE_31__*, %struct.TYPE_31__** %11, align 8
  %34 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = call i32 @Lzma2Enc_SetProps(i32 %32, i32 %35)
  %37 = call i32 @RINOK(i32 %36)
  %38 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = load i32*, i32** %9, align 8
  %42 = call i32 @Xz_WriteHeader(i8* %40, i32* %41)
  %43 = call i32 @RINOK(i32 %42)
  store i32 0, i32* %16, align 4
  store %struct.TYPE_33__* null, %struct.TYPE_33__** %17, align 8
  %44 = load %struct.TYPE_31__*, %struct.TYPE_31__** %11, align 8
  %45 = getelementptr inbounds %struct.TYPE_31__, %struct.TYPE_31__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_32__*, %struct.TYPE_32__** %45, align 8
  store %struct.TYPE_32__* %46, %struct.TYPE_32__** %18, align 8
  %47 = call i32 @XzBlock_ClearFlags(%struct.TYPE_34__* %15)
  %48 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %49 = icmp ne %struct.TYPE_32__* %48, null
  %50 = zext i1 %49 to i64
  %51 = select i1 %49, i32 1, i32 0
  %52 = add nsw i32 1, %51
  %53 = call i32 @XzBlock_SetNumFilters(%struct.TYPE_34__* %15, i32 %52)
  %54 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %55 = icmp ne %struct.TYPE_32__* %54, null
  br i1 %55, label %56, label %105

56:                                               ; preds = %6
  %57 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 2
  %58 = load %struct.TYPE_33__*, %struct.TYPE_33__** %57, align 8
  %59 = load i32, i32* %16, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %16, align 4
  %61 = sext i32 %59 to i64
  %62 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %58, i64 %61
  store %struct.TYPE_33__* %62, %struct.TYPE_33__** %17, align 8
  %63 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %64 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %63, i32 0, i32 0
  %65 = load i64, i64* %64, align 8
  %66 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %67 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %66, i32 0, i32 0
  store i64 %65, i64* %67, align 8
  %68 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %69 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %68, i32 0, i32 1
  store i32 0, i32* %69, align 8
  %70 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %71 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %70, i32 0, i32 0
  %72 = load i64, i64* %71, align 8
  %73 = load i64, i64* @XZ_ID_Delta, align 8
  %74 = icmp eq i64 %72, %73
  br i1 %74, label %75, label %88

75:                                               ; preds = %56
  %76 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %77 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %76, i32 0, i32 1
  %78 = load i32, i32* %77, align 8
  %79 = sub nsw i32 %78, 1
  %80 = sext i32 %79 to i64
  %81 = inttoptr i64 %80 to i8*
  %82 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %83 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %82, i32 0, i32 2
  %84 = load i8**, i8*** %83, align 8
  %85 = getelementptr inbounds i8*, i8** %84, i64 0
  store i8* %81, i8** %85, align 8
  %86 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %87 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %86, i32 0, i32 1
  store i32 1, i32* %87, align 8
  br label %104

88:                                               ; preds = %56
  %89 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %90 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %89, i32 0, i32 3
  %91 = load i64, i64* %90, align 8
  %92 = icmp ne i64 %91, 0
  br i1 %92, label %93, label %103

93:                                               ; preds = %88
  %94 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %95 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %94, i32 0, i32 2
  %96 = load i8**, i8*** %95, align 8
  %97 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %98 = getelementptr inbounds %struct.TYPE_32__, %struct.TYPE_32__* %97, i32 0, i32 2
  %99 = load i32, i32* %98, align 4
  %100 = call i32 @SetUi32(i8** %96, i32 %99)
  %101 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %102 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %101, i32 0, i32 1
  store i32 4, i32* %102, align 8
  br label %103

103:                                              ; preds = %93, %88
  br label %104

104:                                              ; preds = %103, %75
  br label %105

105:                                              ; preds = %104, %6
  %106 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 2
  %107 = load %struct.TYPE_33__*, %struct.TYPE_33__** %106, align 8
  %108 = load i32, i32* %16, align 4
  %109 = add nsw i32 %108, 1
  store i32 %109, i32* %16, align 4
  %110 = sext i32 %108 to i64
  %111 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %107, i64 %110
  store %struct.TYPE_33__* %111, %struct.TYPE_33__** %19, align 8
  %112 = load i64, i64* @XZ_ID_LZMA2, align 8
  %113 = load %struct.TYPE_33__*, %struct.TYPE_33__** %19, align 8
  %114 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %113, i32 0, i32 0
  store i64 %112, i64* %114, align 8
  %115 = load %struct.TYPE_33__*, %struct.TYPE_33__** %19, align 8
  %116 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %115, i32 0, i32 1
  store i32 1, i32* %116, align 8
  %117 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %118 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %117, i32 0, i32 2
  %119 = load i32, i32* %118, align 8
  %120 = call i8* @Lzma2Enc_WriteProperties(i32 %119)
  %121 = load %struct.TYPE_33__*, %struct.TYPE_33__** %19, align 8
  %122 = getelementptr inbounds %struct.TYPE_33__, %struct.TYPE_33__* %121, i32 0, i32 2
  %123 = load i8**, i8*** %122, align 8
  %124 = getelementptr inbounds i8*, i8** %123, i64 0
  store i8* %120, i8** %124, align 8
  %125 = load i32, i32* @MyWrite, align 4
  %126 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 1
  %127 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %126, i32 0, i32 0
  store i32 %125, i32* %127, align 8
  %128 = load i32*, i32** %9, align 8
  %129 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 2
  store i32* %128, i32** %129, align 8
  %130 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 0
  store i64 0, i64* %130, align 8
  %131 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 1
  %132 = call i32 @XzBlock_WriteHeader(%struct.TYPE_34__* %15, %struct.TYPE_26__* %131)
  %133 = call i32 @RINOK(i32 %132)
  %134 = load i32, i32* @SeqCheckInStream_Read, align 4
  %135 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %13, i32 0, i32 1
  %136 = getelementptr inbounds %struct.TYPE_30__, %struct.TYPE_30__* %135, i32 0, i32 0
  store i32 %134, i32* %136, align 4
  %137 = load i32*, i32** %10, align 8
  %138 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %13, i32 0, i32 2
  store i32* %137, i32** %138, align 8
  %139 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %140 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %139, i32 0, i32 0
  %141 = load i8*, i8** %140, align 8
  %142 = call i32 @XzFlags_GetCheckType(i8* %141)
  %143 = call i32 @SeqCheckInStream_Init(%struct.TYPE_36__* %13, i32 %142)
  %144 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %145 = icmp ne %struct.TYPE_32__* %144, null
  br i1 %145, label %146, label %156

146:                                              ; preds = %105
  %147 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %13, i32 0, i32 1
  %148 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %149 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %148, i32 0, i32 0
  %150 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %149, i32 0, i32 1
  store %struct.TYPE_30__* %147, %struct.TYPE_30__** %150, align 8
  %151 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %152 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %151, i32 0, i32 0
  %153 = load %struct.TYPE_33__*, %struct.TYPE_33__** %17, align 8
  %154 = call i32 @SeqInFilter_Init(%struct.TYPE_27__* %152, %struct.TYPE_33__* %153)
  %155 = call i32 @RINOK(i32 %154)
  br label %156

156:                                              ; preds = %146, %105
  %157 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 0
  %158 = load i64, i64* %157, align 8
  store i64 %158, i64* %20, align 8
  %159 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %160 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %159, i32 0, i32 2
  %161 = load i32, i32* %160, align 8
  %162 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 1
  %163 = load %struct.TYPE_32__*, %struct.TYPE_32__** %18, align 8
  %164 = icmp ne %struct.TYPE_32__* %163, null
  br i1 %164, label %165, label %169

165:                                              ; preds = %156
  %166 = load %struct.TYPE_37__*, %struct.TYPE_37__** %8, align 8
  %167 = getelementptr inbounds %struct.TYPE_37__, %struct.TYPE_37__* %166, i32 0, i32 0
  %168 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %167, i32 0, i32 0
  br label %171

169:                                              ; preds = %156
  %170 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %13, i32 0, i32 1
  br label %171

171:                                              ; preds = %169, %165
  %172 = phi %struct.TYPE_30__* [ %168, %165 ], [ %170, %169 ]
  %173 = load i32*, i32** %12, align 8
  %174 = call i32 @Lzma2Enc_Encode(i32 %161, %struct.TYPE_26__* %162, %struct.TYPE_30__* %172, i32* %173)
  store i32 %174, i32* %21, align 4
  %175 = load i32, i32* %21, align 4
  %176 = call i32 @RINOK(i32 %175)
  %177 = getelementptr inbounds %struct.TYPE_36__, %struct.TYPE_36__* %13, i32 0, i32 0
  %178 = load i32, i32* %177, align 8
  %179 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 0
  store i32 %178, i32* %179, align 8
  %180 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 0
  %181 = load i64, i64* %180, align 8
  %182 = load i64, i64* %20, align 8
  %183 = sub nsw i64 %181, %182
  %184 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 1
  store i64 %183, i64* %184, align 8
  store i32 0, i32* %22, align 4
  br label %185

185:                                              ; preds = %193, %171
  %186 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 1
  %187 = load i64, i64* %186, align 8
  %188 = trunc i64 %187 to i32
  %189 = load i32, i32* %22, align 4
  %190 = add i32 %188, %189
  %191 = and i32 %190, 3
  %192 = icmp ne i32 %191, 0
  br i1 %192, label %193, label %198

193:                                              ; preds = %185
  %194 = load i32, i32* %22, align 4
  %195 = add i32 %194, 1
  store i32 %195, i32* %22, align 4
  %196 = zext i32 %194 to i64
  %197 = getelementptr inbounds [128 x i8*], [128 x i8*]* %23, i64 0, i64 %196
  store i8* null, i8** %197, align 8
  br label %185

198:                                              ; preds = %185
  %199 = getelementptr inbounds [128 x i8*], [128 x i8*]* %23, i64 0, i64 0
  %200 = load i32, i32* %22, align 4
  %201 = zext i32 %200 to i64
  %202 = getelementptr inbounds i8*, i8** %199, i64 %201
  %203 = call i32 @SeqCheckInStream_GetDigest(%struct.TYPE_36__* %13, i8** %202)
  %204 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 1
  %205 = getelementptr inbounds [128 x i8*], [128 x i8*]* %23, i64 0, i64 0
  %206 = load i32, i32* %22, align 4
  %207 = zext i32 %206 to i64
  %208 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %209 = getelementptr inbounds %struct.TYPE_28__, %struct.TYPE_28__* %208, i32 0, i32 0
  %210 = load i8*, i8** %209, align 8
  %211 = call i64 @XzFlags_GetCheckSize(i8* %210)
  %212 = add nsw i64 %207, %211
  %213 = call i32 @WriteBytes(%struct.TYPE_26__* %204, i8** %205, i64 %212)
  %214 = call i32 @RINOK(i32 %213)
  %215 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %216 = getelementptr inbounds %struct.TYPE_34__, %struct.TYPE_34__* %15, i32 0, i32 0
  %217 = load i32, i32* %216, align 8
  %218 = getelementptr inbounds %struct.TYPE_35__, %struct.TYPE_35__* %14, i32 0, i32 0
  %219 = load i64, i64* %218, align 8
  %220 = load i32, i32* %22, align 4
  %221 = zext i32 %220 to i64
  %222 = sub nsw i64 %219, %221
  %223 = call i32 @Xz_AddIndexRecord(%struct.TYPE_28__* %215, i32 %217, i64 %222, i32* @g_Alloc)
  %224 = call i32 @RINOK(i32 %223)
  %225 = load %struct.TYPE_28__*, %struct.TYPE_28__** %7, align 8
  %226 = load i32*, i32** %9, align 8
  %227 = call i32 @Xz_WriteFooter(%struct.TYPE_28__* %225, i32* %226)
  ret i32 %227
}

declare dso_local i32 @RINOK(i32) #1

declare dso_local i32 @Lzma2Enc_SetProps(i32, i32) #1

declare dso_local i32 @Xz_WriteHeader(i8*, i32*) #1

declare dso_local i32 @XzBlock_ClearFlags(%struct.TYPE_34__*) #1

declare dso_local i32 @XzBlock_SetNumFilters(%struct.TYPE_34__*, i32) #1

declare dso_local i32 @SetUi32(i8**, i32) #1

declare dso_local i8* @Lzma2Enc_WriteProperties(i32) #1

declare dso_local i32 @XzBlock_WriteHeader(%struct.TYPE_34__*, %struct.TYPE_26__*) #1

declare dso_local i32 @SeqCheckInStream_Init(%struct.TYPE_36__*, i32) #1

declare dso_local i32 @XzFlags_GetCheckType(i8*) #1

declare dso_local i32 @SeqInFilter_Init(%struct.TYPE_27__*, %struct.TYPE_33__*) #1

declare dso_local i32 @Lzma2Enc_Encode(i32, %struct.TYPE_26__*, %struct.TYPE_30__*, i32*) #1

declare dso_local i32 @SeqCheckInStream_GetDigest(%struct.TYPE_36__*, i8**) #1

declare dso_local i32 @WriteBytes(%struct.TYPE_26__*, i8**, i64) #1

declare dso_local i64 @XzFlags_GetCheckSize(i8*) #1

declare dso_local i32 @Xz_AddIndexRecord(%struct.TYPE_28__*, i32, i64, i32*) #1

declare dso_local i32 @Xz_WriteFooter(%struct.TYPE_28__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
